--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/form": "6.2.*",
         "symfony/framework-bundle": "6.2.*",
         "symfony/http-client": "6.2.*",
+        "symfony/http-foundation": "6.2.*",
         "symfony/intl": "6.2.*",
         "symfony/mailer": "6.2.*",
         "symfony/mime": "6.2.*",
@@ -37,8 +38,10 @@
         "symfony/string": "6.2.*",
         "symfony/translation": "6.2.*",
         "symfony/twig-bundle": "6.2.*",
+        "symfony/ux-twig-component": "^2.7",
         "symfony/validator": "6.2.*",
         "symfony/web-link": "6.2.*",
+        "symfony/webpack-encore-bundle": "^1.16",
         "symfony/yaml": "6.2.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
